# GiRbot-Moveo

./: .gitignore  README.md  requirements.txt
moveo_driver/: CMakeLists.txt  setup.py
moveo_driver/MoveoDriver.egg-info/: PKG-INFO  SOURCES.txt
moveo_driver/include/: moveo.h  serial_cobs.h  serial_defs.h
moveo_driver/moveo_driver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
moveo_driver/src/: moveo.cpp  moveo_driver.cpp  serial_cobs.cpp
moveo_firmware/: moveo_firmware.ino  moveo_functions.cpp  moveo_functions.h  serial_cobs.cpp  serial_cobs.h  serial_defs.h
moveo_software/: AuxiliarFunctions.py  DHRobot.py  GiRbot.py  IsochroneMove.py  LinealTrajectory.py  Moveo3D.py  PhysicalRobot.py  PiecewiseExpr.py  SpatialMath.py  aFK_Moveo3D.py  moveo_test.py  nIK_Corke.py  test_VisualizeTraj.py  test_calcDist.py
moveo_software/LTraj_files/: LinealProva22_3_q.npy  LinealProva22_3_t.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[-0.0, 0.0, 0.69, 1.57, -0.0, 0.0]_q.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[-0.0, 0.0, 0.69, 1.57, -0.0, 0.0]_qd.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[-0.0, 0.0, 0.69, 1.57, -0.0, 0.0]_t.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[0.0, 0.22, 0.47, 1.57, -0.0, 0.0]_q.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[0.0, 0.22, 0.47, 1.57, -0.0, 0.0]_qd.npy  [0.22, 0.0, 0.47, 0.0, -0.0, -0.0]-to-[0.0, 0.22, 0.47, 1.57, -0.0, 0.0]_t.npy
moveo_software/TLBXvenv/: pyvenv.cfg
